--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "dotenv": "^17.2.2",
